# ramp

./: hallway.pgm  hallway.world  hallway.yaml  hallway_static_obs.pgm  hallway_static_obs.world  hallway_static_obs.yaml  my_turtlebot_world.launch  my_turtlebot_world_static_obs.launch
evaluation/: CMakeLists.txt  package.xml
evaluation/src/: \  collision_detection.cpp  collision_detection.h  euclidean_distance.cpp  euclidean_distance.h  evaluate.cpp  evaluate.h  evaluation_collision_detection_perform  evaluation_evaluate_performCollisionDetection.cpp  main.cpp  motion_type.h  tags  time.cpp  utility.cpp  utility.h
path_modification/: CMakeLists.txt  package.xml
path_modification/include/: change.h  insert.h  modifier.h  move.h  path_modification_fixtureTest.h  utility.h
path_modification/src/: .insert.cpp.swp  .main.cpp.swp  .utility.cpp.swp  change.cpp  change.h  constraints.cpp  crossover.cpp  crossover.h  delete.cpp  delete.h  insert.cpp  insert.h  main.cpp  modifier.cpp  modifier.h  move.cpp  subscribe_and_publish.cpp  subscribe_and_publish.h  swap.cpp  swap.h  tags  utility.cpp  utility.h
path_modification/test/: change_test.cpp  delete_test.cpp  insert_test.cpp  swap_test.cpp
ramp_debug/: CMakeLists.txt
ramp_debug/launch/: viewPredictedTrajectory.launch
ramp_debug/src/: .viewPredicted.cpp.swp  configuration.cpp  display_base_location.cpp  evaluation_test.cpp  getYaw.cpp  interrupt_trajectory.cpp  motion_type.h  publish_trajectory_command.cpp  publish_trajectory_command.cpp.orig  publish_twist_command.cpp  range.cpp  range.h  tags  test_collision.cpp  test_move_op.cpp  trajectory_request_handler.cpp  utility.cpp  utility.h  viewPredicted.cpp
ramp_msgs/: CMakeLists.txt  package.xml
ramp_msgs/msg/: BezierCurve.msg  BezierInfo.msg  Configuration.msg  EvaluationRequest.msg  KnotPoint.msg  ModificationRequest.msg  ModifiedPath.msg  MotionState.msg  Object.msg  ObjectList.msg  Obstacle.msg  ObstacleList.msg  Path.msg  Population.msg  RampTrajectory.msg  Range.msg  Trajectory.msg  TrajectoryRequest.msg  TrajectoryWithKnots.msg  Update.msg
ramp_msgs/srv/: EvaluationRequest.srv  ModificationRequest.srv  TrajectoryRequest.srv  TrajectorySrv.srv  UpdateRequest.srv
ramp_planner/: CMakeLists.txt  config.yaml  obstacle_tf.txt  package.xml
ramp_planner/include/: control_handler.h  knot_point.h  modifier.h  motion_state.h  parameter_handler.h  path.h  planner.h  population.h  ramp_trajectory.h  range.h  rviz_handler.h  tags  trajectory_request_handler.h  utility.h
ramp_planner/src/: '  .configuration.cpp.swp  .main.cpp.swp  .planner.cpp.swp  .planner.h.swp  .ycm_extra_conf.py  \  bezier_curve.cpp  bezier_curve.cpp.orig  bezier_curve.h  configuration.cpp  configuration.h  control_handler.cpp  control_handler.h  evaluation_request_handler.cpp  evaluation_request_handler.h  knot_point.cpp  knot_point.h  main.cpp  main.cpp.orig  main_gazebo_ob.cpp  main_generate_test_case.cpp  main_obstacle.cpp  main_obstacle_trajectory.cpp  main_obstacle_twist.cpp  main_obstacle_twist_all.cpp  main_pub_map_odom.cpp  main_run_test_case.cpp  main_system_level_testing.cpp  main_world_state_generation.cpp  modification_request_handler.cpp  modification_request_handler.h  modifier.cpp  modifier.h  motion_state.cpp  motion_state.h  obstacle.h  parameter_handler.cpp  parameter_handler.h  path.cpp  (+18 more)
ramp_planner/system_level/: ar_workspace.mat  bar_chart.m  get_data.m  pie_chart.m  simpar_scripts.m  tl_hist.m
ramp_sensing/: CMakeLists.txt  package.xml  ramp_sensing.launch
ramp_sensing/bags/: decreased_obs.bag  increased_obs.bag  moving_ob_test.bag  one_ob_12hz_25ms.bag  one_ob_15ms.bag  one_ob_15ms_then_25ms.bag  one_ob_20hz_25ms.bag  one_ob_25ms.bag  one_ob_25ms_then_15ms.bag  one_ob_dynamic.bag  single_costmap_576_480.bag  single_costmap_80_80.bag  static_ob_long.bag  static_ob_test.bag  turtlebot_books_25ms.bag
ramp_sensing/include/: .obstacle.h.swp  blob_detector.h  circle.h  circle_filter.h  circle_packer.h  data.h  mystuff.h  nonlinearanalyticconditionalgaussian.h  obstacle.h  utility.h
ramp_sensing/launch/: .pub_tfs_gazebo_costmap.launch.swp  costmap_amcl.launch  pub_tfs_gazebo_costmap.launch
ramp_sensing/scripts/: move_models.py  node.py  spawn_n_models.py
ramp_sensing/src/: .main.cpp.swp  .obstacle.cpp.swp  .ycm_extra_conf.py  GridMap2D.cpp  Utilties.cpp  blob_detector.cpp  circle.cpp  circle_filter.cpp  circle_packer.cpp  data.cpp  ir_object.cpp  main.cpp  main_clearing.cpp  main_laser_frame.cpp  main_map_equal_odom.cpp  main_map_rotate.cpp  main_pub_tf_missing_turtlebot_gazebo.cpp  main_test_bfl.cpp  main_tf_basefp_baselink.cpp  nonlinearanalyticconditionalgaussian.cpp  obstacle.cpp  obstacle.h  pub_laser_frame.launch  tags  utility.cpp
reflexxes/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml  package.xml~
reflexxes/include/: .Reflexxes.h.swp  RMLFlags.h  RMLInputParameters.h  RMLOutputParameters.h  RMLPositionFlags.h  RMLPositionInputParameters.h  RMLPositionOutputParameters.h  RMLVector.h  RMLVelocityFlags.h  RMLVelocityInputParameters.h  RMLVelocityOutputParameters.h  Reflexxes.h  ReflexxesAPI.h  TypeIIRMLDecisionTree1A.h  TypeIIRMLDecisionTree1B.h  TypeIIRMLDecisionTree1C.h  TypeIIRMLDecisionTree2.h  TypeIIRMLDecisions.h  TypeIIRMLMath.h  TypeIIRMLPolynomial.h  TypeIIRMLPosition.h  TypeIIRMLQuicksort.h  TypeIIRMLStep1IntermediateProfiles.h  TypeIIRMLStep1Profiles.h  TypeIIRMLStep2IntermediateProfiles.h  TypeIIRMLStep2Profiles.h  TypeIIRMLStep2WithoutSynchronization.h  TypeIIRMLVelocity.h  range.h
reflexxes/src/: .Reflexxes.cpp.swp  .main.cpp.swp  .utility.cpp.swp  Reflexxes.cpp  main.cpp  reflexxes.cpp  reflexxes.h  utility.cpp  utility.h
robot/: CMakeLists.txt  package.xml
robot/src/: base_configuration.cpp  base_configuration.h  corobot.cpp  corobot.h  demo.cpp  main.cpp  tags  utility.cpp  (+2 more)
sensing/: CMakeLists.txt  package.xml
talklisten/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
trajectory_generator/: .CMakeLists.txt.swp  CMakeLists.txt  config.yaml  package.xml  subscribe_and_publish.cpp
(+303 files in other folders)
